fixed gaps

--- a/css/index.css
+++ b/css/index.css
@@ -329,6 +329,7 @@ input::placeholder {
     font-size: 48px;
     letter-spacing: -0.37px;
     line-height: 66px;
+    margin-bottom: 8px;
   }
 
   .partners__description {
@@ -339,6 +340,7 @@ input::placeholder {
     line-height: 28px;
     color: #FBFCFE;
     opacity: 0.7;
+    height: 104px;
   }
 
   .partners__button {
